--- a/gui/chessboardview.ui
+++ b/gui/chessboardview.ui
@@ -18,14 +18,21 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1024</width>
-    <height>768</height>
+    <width>1600</width>
+    <height>1200</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+   <item>
+    <layout class="QFormLayout" name="appButtonsLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+    </layout>
+   </item>
    <item>
     <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,1,1,1,1,1,1,1" columnstretch="1,1,1,1,1,1,1,1,1,1" rowminimumheight="1,1,1,1,1,1,1,1,1,1" columnminimumwidth="1,1,1,1,1,1,1,1,1,1">
      <property name="sizeConstraint">
