--- a/gui/resources.qrc
+++ b/gui/resources.qrc
@@ -6,6 +6,8 @@
   <file>../res/app_icons/save.png</file>
   <file>../res/app_icons/open.png</file>
   <file>../res/app_icons/paste.png</file>
+  <file>../res/app_icons/undo.png</file>
+  <file>../res/app_icons/redo.png</file>
   <file>../res/chess_icons/bishop_black.svg</file>
   <file>../res/chess_icons/bishop_white.svg</file>
   <file>../res/chess_icons/king_black.svg</file>
