--- a/gui/resources.qrc
+++ b/gui/resources.qrc
@@ -1,15 +1,12 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-  <file>../res/app_icons/new.png</file>
-  <file>../res/app_icons/cut.png</file>
-  <file>../res/app_icons/copy.png</file>
   <file>../res/app_icons/save.png</file>
   <file>../res/app_icons/open.png</file>
-  <file>../res/app_icons/paste.png</file>
   <file>../res/app_icons/undo.png</file>
   <file>../res/app_icons/redo.png</file>
   <file>../res/app_icons/forward.png</file>
   <file>../res/app_icons/backward.png</file>
+  <file>../res/app_icons/restart.png</file>
   <file>../res/chess_icons/bishop_black.svg</file>
   <file>../res/chess_icons/bishop_white.svg</file>
   <file>../res/chess_icons/king_black.svg</file>
